--- a/comparition.ipynb
+++ b/comparition.ipynb
@@ -11,32 +11,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking in indexes: http://pypi.douban.com/simple\r\n",
-      "Requirement already satisfied: pyod in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (1.0.6)\r\n",
-      "Requirement already satisfied: scipy>=1.5.1 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from pyod) (1.7.3)\r\n",
-      "Requirement already satisfied: numba>=0.51 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from pyod) (0.56.3)\r\n",
-      "Requirement already satisfied: joblib in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from pyod) (1.2.0)\r\n",
-      "Requirement already satisfied: matplotlib in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from pyod) (3.5.3)\r\n",
-      "Requirement already satisfied: six in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from pyod) (1.16.0)\r\n",
-      "Requirement already satisfied: statsmodels in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from pyod) (0.13.2)\r\n",
-      "Requirement already satisfied: numpy>=1.19 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from pyod) (1.21.6)\r\n",
-      "Requirement already satisfied: scikit-learn>=0.20.0 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from pyod) (1.0.2)\r\n",
-      "Requirement already satisfied: importlib-metadata in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from numba>=0.51->pyod) (5.0.0)\r\n",
-      "Requirement already satisfied: setuptools in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from numba>=0.51->pyod) (65.5.0)\r\n",
-      "Requirement already satisfied: llvmlite<0.40,>=0.39.0dev0 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from numba>=0.51->pyod) (0.39.1)\r\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from scikit-learn>=0.20.0->pyod) (3.1.0)\r\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from matplotlib->pyod) (9.3.0)\r\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from matplotlib->pyod) (4.38.0)\r\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from matplotlib->pyod) (1.4.4)\r\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from matplotlib->pyod) (3.0.9)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from matplotlib->pyod) (2.8.2)\r\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from matplotlib->pyod) (21.3)\r\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from matplotlib->pyod) (0.11.0)\r\n",
-      "Requirement already satisfied: patsy>=0.5.2 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from statsmodels->pyod) (0.5.3)\r\n",
-      "Requirement already satisfied: pandas>=0.25 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from statsmodels->pyod) (1.3.5)\r\n",
-      "Requirement already satisfied: typing-extensions in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from kiwisolver>=1.0.1->matplotlib->pyod) (4.4.0)\r\n",
-      "Requirement already satisfied: pytz>=2017.3 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from pandas>=0.25->statsmodels->pyod) (2022.5)\r\n",
-      "Requirement already satisfied: zipp>=0.5 in /home/eric/miniconda3/envs/pyod/lib/python3.7/site-packages (from importlib-metadata->numba>=0.51->pyod) (3.10.0)\r\n"
+      "Collecting pyod\n",
+      "  Downloading pyod-1.0.6.tar.gz (141 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m141.3/141.3 kB\u001b[0m \u001b[31m6.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: joblib in /home/codespace/.local/lib/python3.10/site-packages (from pyod) (1.2.0)\n",
+      "Requirement already satisfied: matplotlib in /home/codespace/.local/lib/python3.10/site-packages (from pyod) (3.6.0)\n",
+      "Requirement already satisfied: numpy>=1.19 in /home/codespace/.local/lib/python3.10/site-packages (from pyod) (1.23.4)\n",
+      "Collecting numba>=0.51\n",
+      "  Downloading numba-0.56.3-cp310-cp310-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (3.5 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.5/3.5 MB\u001b[0m \u001b[31m40.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: scipy>=1.5.1 in /home/codespace/.local/lib/python3.10/site-packages (from pyod) (1.9.3)\n",
+      "Requirement already satisfied: scikit_learn>=0.20.0 in /home/codespace/.local/lib/python3.10/site-packages (from pyod) (1.1.3)\n",
+      "Requirement already satisfied: six in /home/codespace/.local/lib/python3.10/site-packages (from pyod) (1.16.0)\n",
+      "Collecting statsmodels\n",
+      "  Downloading statsmodels-0.13.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (10.0 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.0/10.0 MB\u001b[0m \u001b[31m67.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting llvmlite<0.40,>=0.39.0dev0\n",
+      "  Downloading llvmlite-0.39.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (34.6 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.6/34.6 MB\u001b[0m \u001b[31m33.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: setuptools in /usr/local/python/3.10.4/lib/python3.10/site-packages (from numba>=0.51->pyod) (58.1.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/codespace/.local/lib/python3.10/site-packages (from scikit_learn>=0.20.0->pyod) (3.1.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->pyod) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->pyod) (4.38.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->pyod) (9.2.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->pyod) (1.0.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->pyod) (2.8.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->pyod) (21.3)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->pyod) (3.0.9)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/codespace/.local/lib/python3.10/site-packages (from matplotlib->pyod) (1.4.4)\n",
+      "Collecting patsy>=0.5.2\n",
+      "  Downloading patsy-0.5.3-py2.py3-none-any.whl (233 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m233.8/233.8 kB\u001b[0m \u001b[31m12.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: pandas>=0.25 in /home/codespace/.local/lib/python3.10/site-packages (from statsmodels->pyod) (1.5.1)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/codespace/.local/lib/python3.10/site-packages (from pandas>=0.25->statsmodels->pyod) (2022.5)\n",
+      "Building wheels for collected packages: pyod\n",
+      "  Building wheel for pyod (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for pyod: filename=pyod-1.0.6-py3-none-any.whl size=175099 sha256=8a1e64d13dcee9476c697793aff38ec1b688091b8d61ba14dc6a98b42548ccb5\n",
+      "  Stored in directory: /home/codespace/.cache/pip/wheels/92/d7/20/a4e07800c31c538e4172ac0a5bdbc4144ae319088d11566882\n",
+      "Successfully built pyod\n",
+      "Installing collected packages: patsy, llvmlite, numba, statsmodels, pyod\n",
+      "Successfully installed llvmlite-0.39.1 numba-0.56.3 patsy-0.5.3 pyod-1.0.6 statsmodels-0.13.2\n"
      ]
     }
    ],
@@ -47,30 +62,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3ad933181bd8a04b432d3370b9dc3b0662ad032c4dfaa4e4f1596c548f763858"
+   }
   }
  },
  "nbformat": 4,
